nestkernel/nest.h

void init_nest( int* argc, char** argv[] );
void reset_kernel();
std::string pprint_to_string( NodeCollectionPTR nc );
size_t nc_size( NodeCollectionPTR nc );
void set_kernel_status( const Dictionary& dict );
Dictionary get_kernel_status();
Dictionary get_nc_status( NodeCollectionPTR node_collection );
void set_nc_status( NodeCollectionPTR nc, std::vector< Dictionary >& params );
NodeCollectionPTR slice_nc( const NodeCollectionPTR nc, long start, long stop, long step );
NodeCollectionPTR create( const std::string& model_name, const size_t n );
NodeCollectionPTR make_nodecollection( const std::vector< size_t >& node_ids );
/**
 * Register node model (i.e. an instance of a class inheriting from `Node`).
 */
template < typename NodeModelT >
void register_node_model( const std::string& name, std::string deprecation_info = std::string() );
void set_kernel_status( const Dictionary& dict );
Dictionary get_kernel_status();
/**
 * Create bipartite connections.
 */
void connect( NodeCollectionPTR sources,
  NodeCollectionPTR targets,
  const Dictionary& connectivity,
  const std::vector< Dictionary >& synapse_params );
/**
 * @brief Connect arrays of node IDs one-to-one
 *
 * Connects an array of sources to an array of targets, with weights and
 * delays from specified arrays, using the one-to-one
 * rule. Additional synapse parameters can be specified with p_keys and p_values.
 * Sources, targets, weights, delays, and receptor types are given
 * as pointers to the first element. All arrays must have the same length,
 * n. Weights, delays, and receptor types can be unspecified by passing a
 * nullptr.
 *
 * The p_keys vector contains keys of additional synapse parameters, with
 * associated values in the flat array p_values. If there are n sources and targets,
 * and M additional synapse parameters, p_keys has a size of M, and the p_values array
 * has length of M*n.
 */
void connect_arrays( const long* sources,
  const long* targets,
  const double* weights,
  const double* delays,
  const std::vector< std::string >& p_keys,
  const double* p_values,
  size_t n,
  const std::string& syn_model );
void simulate( const double t );
NodeCollectionPTR node_collection_array_index( NodeCollectionPTR node_collection, const long* array, unsigned long n );
NodeCollectionPTR node_collection_array_index( NodeCollectionPTR node_collection, const bool* array, unsigned long n );