nestkernel/connection_id.h

inline ConnectionID::ConnectionID()
  : source_node_id_( -1 )
  , target_node_id_( -1 )
  , target_thread_( -1 )
  , synapse_modelid_( -1 )
  , port_( -1 )
{
}
inline long
ConnectionID::get_source_node_id() const
{
  return source_node_id_;
}
inline long
ConnectionID::get_target_node_id() const
{
  return target_node_id_;
}
inline long
ConnectionID::get_target_thread() const
{
  return target_thread_;
}
inline long
ConnectionID::get_synapse_model_id() const
{
  return synapse_modelid_;
}
inline long
ConnectionID::get_port() const
{
  return port_;
}