nestkernel/node_collection.h

inline NodeCollection::const_iterator
NodeCollectionPrimitive::begin( NodeCollectionPTR cp ) const
{
  return nc_const_iterator( cp, *this, /* offset */ 0, /* stride */ 1 );
}
inline NodeCollection::const_iterator
NodeCollectionPrimitive::end( NodeCollectionPTR cp ) const
{
  // The unique end() element of a primitive NC is given by (part 0, element size()) )
  return nc_const_iterator( cp, *this, /* offset */ size(), /* stride */ 1, nc_const_iterator::NCIteratorKind::END );
}
inline size_t
NodeCollectionPrimitive::size() const
{
  // empty NC has first_ == last_ == 0, need to handle that special
  return std::min( last_, last_ - first_ + 1 );
}
inline bool
NodeCollectionPrimitive::empty() const
{
  return last_ == 0;
}
inline NodeCollection::const_iterator
NodeCollectionComposite::begin( NodeCollectionPTR cp ) const
{
  return nc_const_iterator( cp, *this, first_part_, first_elem_, stride_ );
}
inline NodeCollection::const_iterator
NodeCollectionComposite::end( NodeCollectionPTR cp ) const
{
  // The unique end() element of a composite NC is given by one past the last element
  // This is the (potentially non-existing) next element irrespective of stride and step
  return nc_const_iterator(
    cp, *this, last_part_, last_elem_ + 1, /* stride */ 1, nc_const_iterator::NCIteratorKind::END );
}
inline size_t
NodeCollectionComposite::size() const
{
  return size_;
}
inline bool
NodeCollectionComposite::empty() const
{
  // Composite NodeCollections can never be empty.
  return false;
}